--- a/shaneworld/force-app/main/default/aura/CardSearchForm/CardSearchForm.cmp
+++ b/shaneworld/force-app/main/default/aura/CardSearchForm/CardSearchForm.cmp
@@ -1,4 +1,5 @@
-<aura:component implements="flexipage:availableForAllPageTypes,force:appHostable,forceCommunity:availableForAllPageTypes" access="global">
+<aura:component implements="flexipage:availableForAllPageTypes,force:appHostable,forceCommunity:availableForAllPageTypes" 
+                access="global">
     <aura:attribute name="searchCard" type="YuGiOh_Card__c" default="{'sobjectType': 'YuGiOh_Card__c',
                                                                      'Name' : '',
                                                                      'Card_Frame__c':'',
@@ -9,7 +10,7 @@
                                                                      'Monster_Type__c':'',
                                                                      'Attribute__c': ''}"/>
     
-    <aura:registerEvent name="cardSearch" type="c:CardIsSearched"/>
+    <aura:registerEvent name="cardSearched" type="c:CardIsSearched"/>
     
     <form class="slds-form--stacked">
         <lightning:input aura:id="searchForm" 
@@ -35,7 +36,7 @@
                          type="number"
                          value="{!v.Defense__c.Name}" />
         <lightning:input aura:id="searchForm" 
-                         label="Level/Rank/Link"
+                         label="Level/Rank"
                          name="level"
                          type="number"
                          value="{!v.Level__c.Name}" />
