Finished DisplayCustomCard Component

--- a/shaneworld/force-app/main/default/aura/CardSearchForm/CardSearchForm.cmp
+++ b/shaneworld/force-app/main/default/aura/CardSearchForm/CardSearchForm.cmp
@@ -20,34 +20,41 @@
         <lightning:input aura:id="searchForm" 
                          label="Card Frame"
                          name="cardFrame"
-                         value="{!v.Card_Frame__c.Name}" />
+                         value="{!v.Card_Frame__c.Name}" 
+                         class="slds-hide"/>
         <lightning:input aura:id="searchForm" 
                          label="Card Description"
                          name="cardDesc"
-                         value="{!v.Description__c.Name}" />
+                         value="{!v.Description__c.Name}" 
+                         class="slds-hide"/>
         <lightning:input aura:id="searchForm" 
                          label="Attack"
                          name="attack"
                          type="number"
-                         value="{!v.Attack__c.Name}" />
+                         value="{!v.Attack__c.Name}" 
+                         class="slds-hide"/>
         <lightning:input aura:id="searchForm" 
                          label="Defense"
                          name="defense"
                          type="number"
-                         value="{!v.Defense__c.Name}" />
+                         value="{!v.Defense__c.Name}" 
+                         class="slds-hide"/>
         <lightning:input aura:id="searchForm" 
                          label="Level/Rank"
                          name="level"
                          type="number"
-                         value="{!v.Level__c.Name}" />
+                         value="{!v.Level__c.Name}" 
+                         class="slds-hide"/>
         <lightning:input aura:id="searchForm" 
                          label="Monster Type"
                          name="monsterType"
-                         value="{!v.Monster_Type__c.Name}" />
+                         value="{!v.Monster_Type__c.Name}" 
+                         class="slds-hide"/>
         <lightning:input aura:id="searchForm" 
                          label="Attribute"
                          name="attribute"
-                         value="{!v.Attribute__c.Name}" />
+                         value="{!v.Attribute__c.Name}" 
+                         class="slds-hide"/>
         <lightning:button label="Search" 
                           class="slds-m-top--medium"
                           variant="brand"
