--- a/shaneworld/force-app/main/default/aura/CustomCardTable/CustomCardTable.cmp
+++ b/shaneworld/force-app/main/default/aura/CustomCardTable/CustomCardTable.cmp
@@ -1,12 +1,16 @@
-<aura:component implements="flexipage:availableForAllPageTypes" access="global" controller="CardBuilderController">
+<aura:component implements="flexipage:availableForAllPageTypes,force:appHostable,forceCommunity:availableForAllPageTypes" 
+                access="global" 
+                controller="CardBuilderController">
     
     <aura:attribute name="cardList" type="YuGiOh_Card__c[]"/>
     <aura:attribute name="error" type="Boolean" default="false"/>
     
     <aura:handler name="init" action="{!c.onInit}" value="{!this}"/>
     
+    <lightning:button variant="brand" label="Refresh" title="Refresh Card List" onclick="{! c.onInit}" />
+    
     <aura:iteration items="{!v.cardList}" var="card">
-      <c:DisplayCard cardData="{!card}"/>  
+      <c:DisplayCustomCard cardData="{!card}"/>  
     </aura:iteration>
     
     <aura:if isTrue="{!v.error}">
