--- a/shaneworld/force-app/main/default/aura/DisplayCard/DisplayCard.cmp
+++ b/shaneworld/force-app/main/default/aura/DisplayCard/DisplayCard.cmp
@@ -1,4 +1,4 @@
-<aura:component implements="flexipage:availableForAllPageTypes">
+<aura:component implements="flexipage:availableForAllPageTypes,forceCommunity:availableForAllPageTypes">
     <aura:attribute name="cardData" type="YuGiOh_Card__c"/>
     
     <lightning:card title="{! v.cardData.Name}">  
